--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,27 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi>=0.128.0",
-    "requests>=2.32.5",
-    "uvicorn[standard]>=0.40.0",
+    "annotated-doc==0.0.4",
+    "annotated-types==0.7.0",
+    "anyio==4.12.1",
+    "certifi==2026.1.4",
+    "charset-normalizer==3.4.4",
+    "click==8.3.1",
+    "colorama==0.4.6",
+    "fastapi==0.128.0",
+    "h11==0.16.0",
+    "httptools==0.7.1",
+    "idna==3.11",
+    "pydantic==2.12.5",
+    "pydantic-core==2.41.5",
+    "python-dotenv==1.2.1",
+    "pyyaml==6.0.3",
+    "requests==2.32.5",
+    "starlette==0.50.0",
+    "typing-extensions==4.15.0",
+    "typing-inspection==0.4.2",
+    "urllib3==2.6.3",
+    "uvicorn[standard]==0.40.0",
+    "watchfiles==1.1.1",
+    "websockets==16.0",
 ]
