--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,14 @@ dependencies = [
     "h11==0.16.0",
     "httptools==0.7.1",
     "idna==3.11",
+    "mcp>=1.25.0",
+    "openai>=2.15.0",
     "pydantic==2.12.5",
     "pydantic-core==2.41.5",
     "python-dotenv==1.2.1",
     "pyyaml==6.0.3",
     "requests==2.32.5",
+    "rich>=14.2.0",
     "starlette==0.50.0",
     "typing-extensions==4.15.0",
     "typing-inspection==0.4.2",
