--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,34 +1,16 @@
 [project]
-name = "python-uv-fastapi-template"
+name = "llm-mcp-python-rag"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "annotated-doc==0.0.4",
-    "annotated-types==0.7.0",
-    "anyio==4.12.1",
-    "certifi==2026.1.4",
-    "charset-normalizer==3.4.4",
-    "click==8.3.1",
-    "colorama==0.4.6",
-    "fastapi==0.128.0",
-    "h11==0.16.0",
-    "httptools==0.7.1",
-    "idna==3.11",
+    "httpx>=0.28.1",
     "mcp>=1.25.0",
+    "numpy>=2.4.1",
     "openai>=2.15.0",
-    "pydantic==2.12.5",
-    "pydantic-core==2.41.5",
-    "python-dotenv==1.2.1",
+    "pydantic>=2.12.5",
+    "python-dotenv>=1.2.1",
     "pyyaml==6.0.3",
-    "requests==2.32.5",
     "rich>=14.2.0",
-    "starlette==0.50.0",
-    "typing-extensions==4.15.0",
-    "typing-inspection==0.4.2",
-    "urllib3==2.6.3",
-    "uvicorn[standard]==0.40.0",
-    "watchfiles==1.1.1",
-    "websockets==16.0",
 ]
